import "mapreduce/yt/interface/protos/extension.proto";

package NYT.NTableClientBenchmark;

message TCanonizedUrlRowProto
{
    message TShardDocIds
    {
        message TShardPair
        {
            optional string Shard = 1;
            optional uint64 DocId = 2;
        }

        repeated TShardPair Entries = 1;
    }

    optional string Host = 1;
    optional string Path = 2;
    optional string Region = 3;
    optional string OriginalUrl = 4;
    optional string BeautyUrl = 5;
    optional string MainContentUrl = 6;
    optional TShardDocIds ShardDocIds = 7;
}

message TIntermediateSemidupsDataProto
{
    message TSemidupsData
    {
        optional string DocId = 1;
        optional uint64 MainDocId = 2;
        optional uint32 Distance = 3;
        optional string Reason = 4;
        optional uint32 IsNotMain = 5;
        optional bool HasNoContentDups = 6;
    }

    message TUrlData
    {
        optional string Url = 1;
        optional string DocId = 2;
        optional bool HasNoContentDups = 3;
        optional uint64 ContentHash = 4;
        optional uint64 Simhash = 5;
        optional uint32 TitleHash = 6;
        optional uint32 DocLength = 7;
        optional uint32 Language = 8;
        optional string Host = 9;
        optional uint64 DocId8 = 10;
        optional string Region = 11;
        optional string MainMirror = 12;
    }

    optional string DocId = 1;
    optional uint32 TableIndex = 2;
    optional TSemidupsData SemidupsData = 3 [(NYT.flags)=SERIALIZATION_YT];
    optional TUrlData UrlData = 4 [(NYT.flags)=SERIALIZATION_YT];
}

message TUrlDataRowProto
{
    optional string Host = 1;
    optional string Path = 2;
    optional string Region = 3;
    optional uint64 LastAccess = 4;
    optional uint64 ExportTime = 5;
    optional uint64 TextCRC = 6;
    optional uint64 HttpModTime = 7;
}

